--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".quiz.QuizActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
