--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".quiz.QuizActivity"
+            android:name=".form.FormActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,9 +21,9 @@
             </intent-filter>
         </activity>
 
-        <!--<activity-->
-        <!--android:name=".quiz.QuizActivity"-->
-        <!--android:screenOrientation="portrait"/>-->
+        <activity
+            android:name=".quiz.QuizActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
