--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -25,9 +26,19 @@ android {
         versionName "1.0"
     }
 
+    signingConfigs {
+        release {
+            storeFile file("quizandroid.keystore")
+            storePassword "quizandroid"
+            keyAlias "quizandroid"
+            keyPassword "quizandroid"
+        }
+    }
+
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
+
             buildConfigField "String", "PARSE_APPLICATION_ID", "\"${quizApplicationId}\""
             buildConfigField "String", "PARSE_CLIENT_KEY", "\"${quizClientKey}\""
             buildConfigField "String", "PARSE_ADMIN_USERNAME", "\"${quizAdminUsername}\""
@@ -35,7 +46,15 @@ android {
         }
 
         release {
+            buildConfigField "String", "PARSE_APPLICATION_ID", "\"${quizApplicationId}\""
+            buildConfigField "String", "PARSE_CLIENT_KEY", "\"${quizClientKey}\""
+            buildConfigField "String", "PARSE_ADMIN_USERNAME", "\"${quizAdminUsername}\""
+            buildConfigField "String", "PARSE_ADMIN_PASSWORD", "\"${quizAdminPassword}\""
+
+            signingConfig signingConfigs.release
+
             minifyEnabled false
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -51,4 +70,9 @@ dependencies {
             'com.mobsandgeeks:android-saripaar:2.0.2',
             'com.jakewharton:butterknife:7.0.1'
     )
+
+    // Crashlytics Kit
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
+        transitive = true
+    }
 }
